Fix for the date field label and staff field alignment.

--- a/full_rubik_style.scss
+++ b/full_rubik_style.scss
@@ -844,6 +844,9 @@ table[id*='field-notes-values'] > thead {
   td:not([class]) > .ajax-new-content {
     position: relative;
 
+    .field-name-field-date {
+      width: auto;
+    }
     .field-name-field-staff {
       float: left;
 
